--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="intro-heading">TECHNICA</div>
                 <div class="intro-lead-in">The All Women's Hackathon at the University of Maryland</div>
 
-                <a href="#services" class="page-scroll btn btn-xl animate_rev">Register</a>
+                <a href="#services" class="page-scroll btn btn-xl">Register</a>
             </div>
         </div>
     </header>
