--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Technica | The All Women's Hackathon</title>
+    <title>Technica | The All Women Hackathon</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="css/agency.css" rel="stylesheet">
+    <link href="css/agency.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/sponsors.css" rel="stylesheet">
 
@@ -71,9 +71,14 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">TECHNICA</div>
-                <div class="intro-lead-in">The All Women's Hackathon at the University of Maryland</div>
+                <div class="intro-lead-in">The All Women Hackathon at the University of Maryland</div>
 
-                <a href="#services" class="page-scroll btn btn-xl">Register</a>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <a href="#services" class="page-scroll btn btn-xl">Register</a>
+                  </div>
+                </div>
+
             </div>
         </div>
     </header>
@@ -443,8 +448,8 @@
                     <div id="collapse3" class="panel-collapse collapse">
                       <div class="panel-body">
                         <p>
-                          You can register here! Technica admission will be granted on a first-come-first-serve basis,
-                          so sign up early to reserve your spot.
+                          Come back to register on this website in late August.
+                          Technica admission will be granted on a first-come-first-serve basis, so sign up early to reserve your spot!
                         </p>
                     </div>
                   </div>
@@ -462,8 +467,7 @@
                    <div id="collapse4" class="panel-collapse collapse">
                      <div class="panel-body">
                        <p>
-                         We will be providing bus routes to Toronto, New York, New Jersey, Georgia, Florida, North Carolina, Pennsylvania, Virginia, and Maryland. RSVP for a bus here!
-                         Unfortunately we will not be able to reimburse hackers individually for their travel.
+                         Take this interest survey to request transportation for your university or high school!
                        </p>
                    </div>
                  </div>
@@ -522,7 +526,7 @@
                      <div id="collapse7" class="panel-collapse collapse">
                        <div class="panel-body">
                          <p>
-                           Anyone that identifies as a woman or non-binary may register as a hacker! All ages are welcome.
+                           Anyone who identifies as a woman or non-binary may register as a hacker! All ages are welcome.
                          </p>
                      </div>
                    </div>
@@ -540,7 +544,7 @@
                     <div id="collapse8" class="panel-collapse collapse">
                       <div class="panel-body">
                         <p>
-                          Technica 2016 will take place at the Reckord Armory at the Univeristy of Maryland. Directions are located here!
+                          Come back and visit this website by mid July for more details!
                         </p>
                     </div>
                   </div>
@@ -578,11 +582,10 @@
                   <div id="collapse10" class="panel-collapse collapse">
                     <div class="panel-body">
                       <p>
-                        You must bring a valid student or government issued ID card for admission.
-                          Bring your laptop and charging cables and any other specific materials you’ll need for your hacking project.
-                          If you are planning on renting hardware for your hack, please make sure to bring a government issued ID!
-                          You may also bring a sleeping bag and pillow if that makes you more comfortable, though air mattresses will be provided.
-                          Everything else will be provided!
+                      You must bring a valid student or government issued ID card for admission.
+                      Bring your laptop and charging cables and any other specific materials you’ll need for your hacking project.
+                      If you are planning on renting hardware for your hack, please make sure to bring a government issued ID!
+                      Bring a sleeping bag and pillow if that makes you more comfortable for the night. Everything else will be provided!
                       </p>
                   </div>
                 </div>
@@ -718,24 +721,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Please let us know if you have any questions, comments, or concerns!</h3>
+                    <h3 class="section-subheading text-muted">Reach out to us at hello@gotechnica.org</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-md-offset-3 text-center">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                <div class="col-md-12 col-md-offset-3 text-center">
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/abhat98@gmail.com" method="post" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" name="Name" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" name="Email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" name="Message" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             <div class="clearfix"></div>
@@ -754,7 +757,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy;Developed by Atharva Bhat(2017)</span>
+                    <span class="copyright">Copyright &copy;Technica 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
