Fixed contact form issue by commenting out contact_me.js

--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 col-md-offset-3 text-center">
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/abhat98@gmail.com" method="post" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/abhat1@terpmail.umd.edu" method="POST" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -744,7 +744,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" value="Send" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
                     </form>
@@ -888,7 +888,7 @@
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
