--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
                     <li><a class="page-scroll" href="#faq">FAQ</a> </li>
-                    <li><a class="page-scroll" href="#milestones">Milestones</a></li>
+                    <!-- <li><a class="page-scroll" href="#milestones">Milestones</a></li> -->
                     <li><a class="page-scroll" href="#team">Team</a></li>
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
-
-
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -596,7 +594,7 @@
 
 
     <!-- Timeline/Milestones Section -->
-    <section id="milestones">
+    <!-- <section id="milestones">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -674,10 +672,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
