--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <![endif]-->
 
 </head>
-<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:10px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;left:10px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2018/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
 <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -47,15 +47,20 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" id="main-nav" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                  <span class="sr-only">Toggle navigation</span>
+                  <span style="background-color:white;" class="icon-bar"></span>
+                  <span style="background-color:white;" class="icon-bar"></span>
+                  <span style="background-color:white;" class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"></a>
+
+                <!-- <a class="navbar-brand page-scroll" href="#page-top">Technica</a> -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden"><a href="#page-top"></a></li>
+                    <!-- <li><a class="page-scroll" href="#page-top">Home</a></li> -->
+                    <li><a id="home-link" class="page-scroll" href="#page-top">Home</a></li>
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
                     <li><a class="page-scroll" href="#faq">FAQ</a> </li>
@@ -74,8 +79,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">TECHNICA</div>
-                <div class="intro-lead-in">The All Women Hackathon at the University of Maryland</div>
-
+                <div class="intro-lead-in">The All-Women Hackathon at the University of Maryland</div>
+                <br />
                 <div class="row">
                   <div class="col-lg-12">
                     <a href="#services" class="page-scroll btn btn-xl">Register</a>
