--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" id="main-nav" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <!-- <a class="navbar-brand page-scroll" href="#page-top">Technica</a> -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                   <span class="sr-only">Toggle navigation</span>
                   <span style="background-color:white;" class="icon-bar"></span>
                   <span style="background-color:white;" class="icon-bar"></span>
                   <span style="background-color:white;" class="icon-bar"></span>
                 </button>
 
-                <!-- <a class="navbar-brand page-scroll" href="#page-top">Technica</a> -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,6 +68,7 @@
                     <li><a class="page-scroll" href="#team">Team</a></li>
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
                 </ul>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -81,9 +82,12 @@
                 <div class="intro-heading">TECHNICA</div>
                 <div class="intro-lead-in">The All-Women Hackathon at the University of Maryland</div>
                 <br />
+                <br />
                 <div class="row">
-                  <div class="col-lg-12">
+                  <div class="col-xs-12">
                     <a href="#services" class="page-scroll btn btn-xl">Register</a>
+                    <a href="#services" class="page-scroll btn btn-xl">Sponsor</a>
+
                   </div>
                 </div>
 
