Updated sponsor button link and color

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!-- <li><a class="page-scroll" href="#page-top">Home</a></li> -->
                     <li><a id="home-link" class="page-scroll" href="#page-top">Home</a></li>
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
@@ -82,12 +81,10 @@
                 <div class="intro-heading">TECHNICA</div>
                 <div class="intro-lead-in">The All-Women Hackathon at the University of Maryland</div>
                 <br />
-                <br />
                 <div class="row">
                   <div class="col-xs-12">
-                    <a href="#services" class="page-scroll btn btn-xl">Register</a>
-                    <a href="#services" class="page-scroll btn btn-xl">Sponsor</a>
-
+                    <!-- <a href="#services" class="page-scroll btn btn-xl">Register</a> -->
+                    <a href="mailto:sponsorship.technica@gmail.com" class="page-scroll btn btn-xl">Sponsor</a>
                   </div>
                 </div>
 
@@ -594,6 +591,7 @@
     </section>
 
 
+
     <!-- Timeline/Milestones Section -->
     <!-- <section id="milestones">
         <div class="container">
@@ -743,7 +741,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" value="Send" class="btn btn-xl">Send Message</button>
+                                <button id="sendButton" type="submit" value="Send" class="btn btn-xl">Send Message</button>
                             </div>
                         </div>
                     </form>
