Restored timeline, updated text

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
                     <li><a class="page-scroll" href="#faq">FAQ</a> </li>
-                    <!-- <li><a class="page-scroll" href="#milestones">Milestones</a></li> -->
-                    <li><a class="page-scroll" href="#team">Team</a></li>
+                    <li><a class="page-scroll" href="#milestones">Milestones</a></li>
+                    <!-- <li><a class="page-scroll" href="#team">Team</a></li> -->
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
                 </ul>
 
@@ -593,7 +593,7 @@
 
 
     <!-- Timeline/Milestones Section -->
-    <!-- <section id="milestones">
+    <section id="milestones">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -610,11 +610,14 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
+                                    <h4>August 2015</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Technica started as a ....</p>
+                                    <p class="text-muted">The first Technica was founded in 2015 at the University of Maryland, College Park.
+                                      Its main goal is to introduce people who identify as women or non-binary from diverse backgrounds to tech.
+
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -624,11 +627,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">A Hackathon is born</h4>
+                                    <h4>October 2016</h4>
+                                    <h4 class="subheading">Growing Strong</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Technica starts gain ground as we reach...</p>
+                                    <p class="text-muted">Our Facebook page reached 1000 likes!</p>
                                 </div>
                             </div>
                         </li>
@@ -638,11 +641,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">3 year Anniversary</h4>
+                                    <h4>November 2016</h4>
+                                    <h4 class="subheading">A World Record</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We've been here for 3 years!</p>
+                                    <p class="text-muted">Technica became the largest all-women hackathon with over 850 participants, who
+                                      Our participants came from all over the country and Canada, including Pennsylvania, New York,
+                                      New Jersey, Maryland, North Carolina, Georgia, Florida, and Toronto!</p>
                                 </div>
                             </div>
                         </li>
@@ -652,11 +657,14 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">We break 800 hackers</h4>
+                                    <h4>Present</h4>
+                                    <h4 class="subheading">To Infinity and Beyond!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We are now the world's largest all-female hackathon!</p>
+                                    <p class="text-muted">We are looking forward to our third year hosting Technica.
+                                      Our organizing team is the largest it has ever been; with all of our efforts,
+                                      we hope to make it a great experience for our hackers, mentors, and sponsors.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -671,10 +679,10 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Team Section -->
-    <section id="team">
+    <!-- <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -682,7 +690,7 @@
                     <h3 class="section-subheading text-muted">Pictures coming soon!</h3>
                 </div>
             </div>
-    </section>
+    </section> -->
 
     <!-- Clients Aside -->
     <!-- <aside class="clients">
