updated contact form colors and font sizes

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-md-12">
 
                     <!-- <h4 class="service-heading text-center">What is Technica?</h4> -->
-                    <p>Technica is the University of Maryland's all-women hackathon. Over the duration of 24 hours, women are immersed in tech culture and encouraged to exercise their imagination to create
+                    <p class="large">Technica is the University of Maryland's all-women hackathon. Over the duration of 24 hours, women are immersed in tech culture and encouraged to exercise their imagination to create
                       interesting and innovative hacks. Technica is diverging from the typical hackathon as we encourage gender diversification, and ask sponsors to hack alongside students in order to build stronger connections
                       between students, sponsors, and the tech world.</p>
                       <br>
@@ -463,7 +463,8 @@
                    <div id="collapse4" class="panel-collapse collapse">
                      <div class="panel-body">
                        <p>
-                         Take this interest survey to request transportation for your university or high school!
+                         Take this interest <a href="https://technicaumd.typeform.com/to/PYl2pY">survey</a> to request
+                         transportation for your university or high school!
                        </p>
                    </div>
                  </div>
@@ -614,7 +615,7 @@
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The first Technica was founded in 2015 at the University of Maryland, College Park.
+                                    <p class="text-muted timeline-text">The first Technica was founded in 2015 at the University of Maryland, College Park.
                                       Its main goal is to introduce people who identify as women or non-binary from diverse backgrounds to tech.
 
                                     </p>
@@ -631,7 +632,7 @@
                                     <h4 class="subheading">Growing Strong</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Our Facebook page reached 1000 likes!</p>
+                                    <p class="text-muted timeline-text">Our Facebook page reached 1000 likes!</p>
                                 </div>
                             </div>
                         </li>
@@ -645,7 +646,7 @@
                                     <h4 class="subheading">A World Record</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Technica became the largest all-women hackathon with over 850 participants, who
+                                    <p class="text-muted timeline-text">Technica became the largest all-women hackathon with over 850 participants.
                                       Our participants came from all over the country and Canada, including Pennsylvania, New York,
                                       New Jersey, Maryland, North Carolina, Georgia, Florida, and Toronto!</p>
                                 </div>
@@ -661,7 +662,7 @@
                                     <h4 class="subheading">To Infinity and Beyond!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We are looking forward to our third year hosting Technica.
+                                    <p class="text-muted timeline-text">We are looking forward to our third year hosting Technica.
                                       Our organizing team is the largest it has ever been; with all of our efforts,
                                       we hope to make it a great experience for our hackers, mentors, and sponsors.
                                     </p>
@@ -726,7 +727,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Reach out to us at hello@gotechnica.org</h3>
+                    <h3 style="color:white;" class="section-subheading">Reach out to us at hello@gotechnica.org!</h3>
                 </div>
             </div>
             <div class="row">
@@ -778,10 +779,10 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <!-- <li><a href="#">Privacy Policy</a>
                         </li>
                          <li><a href="#">Terms of Use</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
