--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="home-link" class="page-scroll" href="#page-top">Home</a></li>
                     <li><a class="page-scroll" href="#about">About</a></li>
@@ -670,7 +670,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image animate">
                                 <h4>Be Part
                                     <br>Of Our
                                     <br>Story!</h4>
@@ -750,7 +750,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button id="sendButton" type="submit" value="Send" class="btn btn-xl">Send Message</button>
+                                <button id="sendButton" type="submit" value="Send" class="btn btn-xl animate-button">Send Message</button>
                             </div>
                         </div>
                     </form>
@@ -767,13 +767,13 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a>
+                        <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a>
+                        <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a>
+                        <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a>
                         </li>
-                        <li><a href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
+                        <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
                         </li>
                     </ul>
                 </div>
