--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
                     <li><a class="page-scroll" href="#faq">FAQ</a> </li>
-                    <li><a class="page-scroll" href="#milestones">Milestones</a></li>
+                    <!-- <li><a class="page-scroll" href="#milestones">Milestones</a></li> -->
                     <!-- <li><a class="page-scroll" href="#team">Team</a></li> -->
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
                 </ul>
@@ -85,7 +85,7 @@
                   <div class="col-xs-12">
                     <!-- <a href="#services" class="page-scroll btn btn-xl">Register</a> -->
                     <a href="mailto:sponsorship.technica@gmail.com" class="page-scroll btn btn-xl">Sponsor Us</a>
-                    <a target="_blank" href="https://technicaumd.typeform.com/to/xUo859"" class="page-scroll btn btn-xl">Be A Mentor</a>
+                    <a target="_blank" href="https://technicaumd.typeform.com/to/xUo859" class="page-scroll btn btn-xl">Be A Mentor</a>
                   </div>
                 </div>
 
@@ -136,9 +136,21 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sponsors</h2>
-                    <h3 class="section-subheading text-muted">Want to be the first on this list? Email us at sponsorship.technica@gmail.com!</h3>
+                    <h3 class="section-subheading text-muted">Want to be on this page? Email us at sponsorship.technica@gmail.com!</h3>
                 </div>
             </div>
+
+            <div class="row sponsors">
+              <!-- <div class="col-md-6">
+                <a target="_blank" href="https://www.cmns.umd.edu/"><img src="img/sponsors/cmns-min.png" name="College of Mathematical and Natural Sceinces"></a>
+              </div> -->
+              <div class="col-md-4 col-md-offset-4">
+                <a target="_blank" href="http://www.rockwellcollins.com/"><img src="img/sponsors/rockwell-min.png" name="Rockwell Collins"></a>
+              </div>
+            </div>
+
+
+
 
             <!-- <div class="row-custom sponsors centered">
                 <div class="half">
@@ -585,7 +597,7 @@
 
 
     <!-- Timeline/Milestones Section -->
-    <section id="milestones">
+    <!-- <section id="milestones">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -671,7 +683,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Team Section -->
     <!-- <section id="team">
@@ -693,18 +705,17 @@
                     <h2 class="section-heading">Contact Us</h2>
                     <h3 style="color:white;" class="section-subheading">Reach out to us at hello@gotechnica.org!</h3>
                 </div>
-
             </div>
+            <!-- SOCIAL BUTTONS -->
             <div class="row">
               <div class="col-md-12 text-center">
                   <ul class="list-inline social-buttons">
-                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a>                        </li>
-                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
-                    </li>
+
+                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a></li>
+                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a></li>
+
                   </ul>
               </div>
             </div>
@@ -713,29 +724,12 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy;Technica 2017</span>
+                <div class="col-md-4 col-md-offset-4">
+                  <span class="copyright">Copyright &copy;Technica 2017</span>
                 </div>
-                <div class="col-md-4">
-                    <!-- <ul class="list-inline social-buttons">
-                        <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a>                        </li>
-                        <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a>
-                        </li>
-                        <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
-                        </li>
-                    </ul> -->
-                    <span class="copyright">The footer is empty! What should we put here?</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <!-- <li><a href="#">Privacy Policy</a>
-                        </li>
-                         <li><a href="#">Terms of Use</a>
-                        </li> -->
-                    </ul>
-                </div>
+                <!-- <div class="col-md 4 col-md-offset-4">
+                  <img src="img/logos/technica-logo-white-colorstripe.svg" />
+                </div> -->
             </div>
         </div>
     </footer>
