--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse">
+            <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a id="home-link" class="page-scroll" href="#page-top">Home</a></li>
                     <li><a class="page-scroll" href="#about">About</a></li>
                     <li><a class="page-scroll" href="#sponsors">Sponsors</a>  </li>
                     <li><a class="page-scroll" href="#faq">FAQ</a> </li>
-                    <!-- <li><a class="page-scroll" href="#milestones">Milestones</a></li> -->
+                    <li><a class="page-scroll" href="#milestones">Milestones</a></li>
                     <!-- <li><a class="page-scroll" href="#team">Team</a></li> -->
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
                 </ul>
@@ -597,7 +597,7 @@
 
 
     <!-- Timeline/Milestones Section -->
-    <!-- <section id="milestones">
+    <section id="milestones">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -610,7 +610,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/sprout.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -627,7 +627,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/thumbs.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -641,7 +641,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/globe.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -650,19 +650,19 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted timeline-text">Technica became the largest all-women hackathon with over 850 participants.
-                                      Our participants came from all over the country and Canada, including Pennsylvania, New York,
-                                      New Jersey, Maryland, North Carolina, Georgia, Florida, and Toronto!</p>
+                                      Our participants came from aPennsylvania, New York,
+                                      New Jersey, Maryland, North Carolina, Georgia, Florida, and even Toronto, Canada!</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/cake.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Present</h4>
-                                    <h4 class="subheading">To Infinity and Beyond!</h4>
+                                    <h4>November 2017</h4>
+                                    <h4 class="subheading">Three Year Anniversary</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted timeline-text">We are looking forward to our third year hosting Technica.
@@ -673,7 +673,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image animate">
+                            <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of Our
                                     <br>Story!</h4>
@@ -683,7 +683,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Team Section -->
     <!-- <section id="team">
