added easing animation on button hover colors

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <!-- <link href="css/agency.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet"> -->
     <link href="css/main.css" rel="stylesheet" >
     <link href="css/sponsors.css" rel="stylesheet">
 
@@ -80,6 +78,7 @@
             <div class="intro-text">
                 <div class="intro-heading">TECHNICA</div>
                 <div class="intro-lead-in">The All-Women Hackathon at the University of Maryland</div>
+                <br />
                 <br />
                 <div class="row">
                   <div class="col-xs-12">
@@ -542,7 +541,7 @@
                     <div id="collapse8" class="panel-collapse collapse">
                       <div class="panel-body">
                         <p>
-                          Come back and visit this website by mid July for more details!
+                          Come back and visit this website by mid-July for more details!
                         </p>
                     </div>
                   </div>
@@ -649,9 +648,9 @@
                                     <h4 class="subheading">A World Record</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted timeline-text">Technica became the largest all-women hackathon with over 850 participants.
-                                      Our participants came from aPennsylvania, New York,
-                                      New Jersey, Maryland, North Carolina, Georgia, Florida, and even Toronto, Canada!</p>
+                                    <p class="text-muted timeline-text">Technica became the largest all-women hackathon with over 850 participants
+                                      who came from Pennsylvania, New York,
+                                      New Jersey, North Carolina, Georgia, Florida, and even Toronto, Canada!</p>
                                 </div>
                             </div>
                         </li>
@@ -666,7 +665,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted timeline-text">We are looking forward to our third year hosting Technica.
-                                      Our organizing team is the largest it has ever been; with all of our efforts,
+                                      Our organizing team is the largest it has ever been;
                                       we hope to make it a great experience for our hackers, mentors, and sponsors.
                                     </p>
                                 </div>
@@ -725,7 +724,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                  <span class="copyright">Copyright &copy;Technica 2017</span>
+                  <p class="copyright">Copyright &copy;Technica 2017</p>
                 </div>
                 <!-- <div class="col-md 4 col-md-offset-4">
                   <img src="img/logos/technica-logo-white-colorstripe.svg" />
@@ -770,62 +769,6 @@
             </div>
         </div>
     </div>
-
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>Project Heading</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview-min.png" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview-min.png" alt="">
-                                <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
     </div> -->
 
     <!-- jQuery -->
