added new pink/blue timeline images

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/timeline/thumbs.png" alt="">
-                                <!-- <img class="img-circle img-responsive" src="img/timeline/globe-blue.png" alt=""> -->
+                                <!-- <img class="img-circle img-responsive" src="img/timeline/thumbs-blue.png" alt=""> -->
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -495,7 +495,7 @@
                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/timeline/globe.png" alt="">
-                                <!-- <img class="img-circle img-responsive" src="img/timeline/thumbs-pink.png" alt=""> -->
+                                <!-- <img style="background:#00ffff" class="img-circle img-responsive" src="img/timeline/globe-pink.png" alt=""> -->
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
