--- a/index.html
+++ b/index.html
@@ -698,12 +698,12 @@
             <div class="row">
               <div class="col-md-12 text-center">
                   <ul class="list-inline social-buttons">
-                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter"></i></a>                        </li>
-                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook"></i></a>
+                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter fa-2x"></i></a>                        </li>
+                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook fa-2x"></i></a>
                     </li>
-                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram"></i></a>
+                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram fa-2x"></i></a>
                     </li>
-                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
+                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope fa-2x"></i></a>
                     </li>
                   </ul>
               </div>
@@ -714,7 +714,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy;Technica 2017</span>
+                    <span class="copyright"></span>
                 </div>
                 <div class="col-md-4">
                     <!-- <ul class="list-inline social-buttons">
@@ -726,7 +726,7 @@
                         <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope"></i></a>
                         </li>
                     </ul> -->
-                    <span class="copyright">The footer is empty! What should we put here?</span>
+                    <span class="copyright">&copy; 2017 Technica</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
