changed intro-lead in message

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">TECHNICA</div>
-                <div class="intro-lead-in">The All-Women Hackathon at the University of Maryland</div>
+                <div class="intro-lead-in">Encouraging Diversity in Technology and Beyond</div>
                 <br />
                 <br />
                 <div class="row">
@@ -404,7 +404,7 @@
                    <div class="panel-heading panel-heading-pink">
                      <h4 class="panel-title">
                        <a class="faq-panel" data-toggle="collapse" href="#collapse9">
-                         <h3 class="service-heading text-center">How do teams work? Can I go solo?</h3>
+                         <h3 class="service-heading text-center">How do teams work?</h3>
                        </a>
                      </h4>
                    </div>
@@ -461,8 +461,8 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/timeline/sprout.png" alt="">
-                                <!-- <img class="img-circle img-responsive" src="img/timeline/sprout-pink.png" alt=""> -->
+                                <!-- <img class="img-circle img-responsive" src="img/timeline/sprout.png" alt=""> -->
+                                <img class="img-circle img-responsive" src="img/timeline/1.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -470,7 +470,7 @@
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted timeline-text">The first Technica was founded in 2015 at the University of Maryland, College Park.
+                                    <p class="text-muted timeline-text">Technica was founded in 2015 at the University of Maryland, College Park.
                                       Its main goal is to introduce people who identify as women or non-binary from diverse backgrounds to tech.
 
                                     </p>
@@ -479,8 +479,8 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/timeline/thumbs.png" alt="">
-                                <!-- <img class="img-circle img-responsive" src="img/timeline/thumbs-blue.png" alt=""> -->
+                                <!-- <img class="img-circle img-responsive" src="img/timeline/thumbs.png" alt=""> -->
+                                <img class="img-circle img-responsive" src="img/timeline/2.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -494,8 +494,8 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/timeline/globe.png" alt="">
-                                <!-- <img style="background:#00ffff" class="img-circle img-responsive" src="img/timeline/globe-pink.png" alt=""> -->
+                                <!-- <img class="img-circle img-responsive" src="img/timeline/globe.png" alt=""> -->
+                                <img class="img-circle img-responsive" src="img/timeline/3.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -511,8 +511,8 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/timeline/cake.png" alt="">
-                                <!-- <img class="img-circle img-responsive" src="img/timeline/cake-blue.png" alt=""> -->
+                                <!-- <img class="img-circle img-responsive" src="img/timeline/cake.png" alt=""> -->
+                                <img class="img-circle img-responsive" src="img/timeline/4.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -529,9 +529,10 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
+                                <!-- <h4>Be Part
                                     <br>Of Our
-                                    <br>Story!</h4>
+                                    <br>Story!</h4> -->
+                                <img class="img-circle img-responsive" src="img/timeline/5.png" alt="">
                             </div>
                         </li>
                     </ul>
