added text-nowrap class to column to prevent wrapping of social buttons on iphone5

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             </div>
             <!-- SOCIAL BUTTONS -->
             <div class="row">
-              <div class="col-md-12 text-center">
+              <div class="col-md-12 text-center text-nowrap">
                   <ul class="list-inline social-buttons">
                     <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter fa-2x"></i></a></li>
                     <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook fa-2x"></i></a></li>
