made the social icons smaller

--- a/index.html
+++ b/index.html
@@ -565,10 +565,10 @@
             <div class="row">
               <div class="col-md-12 text-center text-nowrap">
                   <ul class="list-inline social-buttons">
-                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter fa-2x"></i></a></li>
-                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook fa-2x"></i></a></li>
-                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram fa-2x"></i></a></li>
-                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope fa-2x"></i></a></li>
+                    <li><a class="animate-button social-twitter" href="https://twitter.com/gotechnica?lang=en"><i class="fa fa-twitter fa-lg"></i></a></li>
+                    <li><a class="animate-button social-facebook" href="https://www.facebook.com/gotechnica/"><i class="fa fa-facebook fa-lg"></i></a></li>
+                    <li><a class="animate-button social-instagram" href="https://www.instagram.com/gotechnica/"><i class="fa fa-instagram fa-lg"></i></a></li>
+                    <li><a class="animate-button social-mail" href="mailto:hello@gotechnica.org"><i class="fa fa-envelope fa-lg"></i></a></li>
                   </ul>
               </div>
             </div>
