updated last timeline image, removed mentor button

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <div class="row">
                   <div class="col-xs-12">
                     <!-- <a href="#services" class="page-scroll btn btn-xl">Register</a> -->
-                    <a href="mailto:sponsorship.technica@gmail.com" class="page-scroll btn btn-xl">Sponsor Us</a>
-                    <a target="_blank" href="https://technicaumd.typeform.com/to/xUo859" class="page-scroll btn btn-xl">Be A Mentor</a>
+                    <a href="mailto:sponsorship.technica@gmail.com" class="page-scroll btn btn-xl">Become a Sponsor</a>
+                    <!-- <a target="_blank" href="https://technicaumd.typeform.com/to/xUo859" class="page-scroll btn btn-xl">Be A Mentor</a> -->
                   </div>
                 </div>
 
@@ -526,15 +526,18 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <!-- <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4> -->
-                                <img class="img-circle img-responsive" src="img/timeline/5.png" alt="">
+                        <li>
+                            <div class="timeline-image static-gradient"></div>
+                            <div class="timeline-panel">
+                              <div class="timeline-heading">
+                                <h4>Be A Part of Our Story</h4>
+                                <h4 class="subheading">Join us at Technica 2017!</h4>
+                              </div>
                             </div>
                         </li>
                     </ul>
+
+
                 </div>
             </div>
         </div>
